[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotfm"
version = "0.0.4"
description = "Simple Python lib to interact with Spotify and Last.FM APIs"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Julien Mailleret", email = "julien@mailleret.fr"}]
dependencies = [
    "pylast",
    "rapidfuzz",
    "spotipy",
]

[project.optional-dependencies]
dev = [
    "freezegun>=1.5.0",     # time mocking for date tests
    "ipython",
    "pre-commit",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",  # parallel test execution
    "ruff",
    "twine",
]

[project.urls]
homepage = "https://github.com/jmlrt/spotfm"

[project.scripts]
spfm = "spotfm.cli:main"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E203",   # whitespace before ':' (handled by formatter)
    "E226",   # missing whitespace around arithmetic operator
    "E501",   # line-too-long (let formatter handle this)
    "E701",   # multiple statements on one line
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                      # verbose output
    "--strict-markers",        # error on unknown markers
    "--tb=short",              # shorter traceback format
    "--cov=spotfm",            # coverage for spotfm package
    "--cov-report=term-missing", # show missing lines in coverage
    "--cov-report=html",       # generate HTML coverage report
    "--cov-branch",            # measure branch coverage
]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that may require setup",
    "slow: Tests that take a long time to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["spotfm"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/hacks/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
