[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotfm"
version = "0.0.4"
description = "Simple Python lib to interact with Spotify and Last.FM APIs"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Julien Mailleret", email = "julien@mailleret.fr"}]
dependencies = [
    "pylast",
    "spotipy",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pre-commit",
    "ruff",
    "twine",
]

[project.urls]
homepage = "https://github.com/jmlrt/spotfm"

[project.scripts]
spfm = "spotfm.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E203",   # whitespace before ':' (handled by formatter)
    "E226",   # missing whitespace around arithmetic operator
    "E501",   # line-too-long (let formatter handle this)
    "E701",   # multiple statements on one line
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
